--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   },
   "homepage": "https://github.com/Crio-Winter-of-Doing-2021/JUMBOGPS-T1#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "geolib": "^3.3.1",
-    "mongoose": "^5.11.18"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18",
+    "socket.io": "^4.0.0"
   }
 }
